# Retina-UX-Auditor

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-build.yml  quality_gate.yml  tests.yml
config/: prompts.yaml  settings.py
docs/: ENGINEERING_LOG.md  architecture.md  methodology.md
docs/adr/: 001-fasthtml-selection.md
src/: main.py
src/core/ai/: vision_client.py
src/core/physics/: contrast.py  entropy.py  saliency.py
src/utils/: image_processing.py  logger.py  prompt_loader.py
src/web/components/: layout.py
src/web/routes/: analyze.py
tests/: conftest.py
tests/unit/: test_physics.py
